--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+astroid==2.0.4
 atomicwrites==1.2.1
 attrs==18.2.0
 certifi==2018.10.15
@@ -5,14 +6,19 @@ chardet==3.0.4
 falcon==1.4.1
 gunicorn==19.9.0
 idna==2.7
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 more-itertools==4.3.0
 pathspec==0.5.9
 pluggy==0.8.0
 py==1.7.0
+pylint==2.1.1
 pytest==3.10.1
 python-mimeparse==1.6.0
 PyYAML==3.13
 requests==2.20.1
 six==1.11.0
 urllib3==1.24.1
+wrapt==1.10.11
 yamllint==1.12.1
